--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -12,10 +12,6 @@ jobs:
     permissions:
       contents: write
 
-    strategy:
-      matrix:
-        python-version: [3.10]
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -23,31 +19,23 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.x"
 
-      - name: Cache pip
+      - name: Cache pip (optional)
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          key: ${{ runner.os }}-pip-3x-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
-            ${{ runner.os }}-pip-
+            ${{ runner.os }}-pip-3x-
 
-      - name: Install system deps (if needed)
-        # optional: add apt-get or other system packages here
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
+
+      - name: Install uv (Astral) and add to PATH
         run: |
-          python -m pip install --upgrade pip
-
-      - name: Install Python dependencies from requirements.txt
-        run: |
-          if [ -f requirements.txt ]; then
-            python -m pip install -r requirements.txt
-          else
-            echo "requirements.txt not found, skipping pip install"
-          fi
-
-      - name: Install uv
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Sync dependencies (uv)
         run: uv sync
@@ -61,7 +49,24 @@ jobs:
       - name: Train model
         run: uv run python src/text_classification.py
 
+      - name: Show output (debug)
+        run: ls -lah output || true
+
+      - name: Verify artifacts
+        run: |
+          echo "Checking for expected artifact files..."
+          if [ ! -f output/model.joblib ]; then
+            echo "ERROR: output/model.joblib not found"
+            exit 1
+          fi
+          if [ ! -f output/preprocessor.joblib ]; then
+            echo "ERROR: output/preprocessor.joblib not found"
+            exit 1
+          fi
+          echo "Artifacts found."
+
       - name: Create Release
+        if: success()
         uses: softprops/action-gh-release@v2
         with:
           tag_name: model-${{ github.run_number }}
