--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -19,15 +19,15 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.x"
+          python-version: "3.12"   
 
       - name: Cache pip
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-3x-${{ hashFiles('**/requirements.txt') }}
+          key: ${{ runner.os }}-pip-312-${{ hashFiles('/requirements.txt') }}
           restore-keys: |
-            ${{ runner.os }}-pip-3x-
+            ${{ runner.os }}-pip-312-
 
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
