--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -37,6 +37,9 @@ jobs:
 
       - name: Download dataset
         run: python src/get_data.py
+      
+      - name: Create output directory
+        run: mkdir -p output
 
       - name: Preprocess data
         run: python src/text_preprocessing.py
