--- a/pom.xml
+++ b/pom.xml
@@ -5,5 +5,5 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>sms</groupId>
 	<artifactId>frontend</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.2.0</version>
 </project>
